openmediavault-clamav (0.6.1) stable; urgency=low

  * Modify package trigger handling. Now the triggers update-fixperms and
    update-locale are only called during package installation.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 13 Apr 2014 02:41:05 +0200

openmediavault-clamav (0.6) stable; urgency=low

  * Update locales.
  * Adapt plugin to Debian Wheezy.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 27 Mar 2014 12:19:12 +0100

openmediavault-clamav (0.5.9) stable; urgency=low

  * Update locales.
  * Fix and improve various display issues in WebGUI.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 01 Feb 2014 22:30:36 +0100

openmediavault-clamav (0.5.8) stable; urgency=low

  * Update locales.
  * Fix and improve various issues.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 29 Jan 2014 12:05:27 +0100

openmediavault-clamav (0.5.7) stable; urgency=low

  * Update locales.
  * Refactor JS overrides to prevent ECMAScript6 compatibility problems.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 07 Jan 2014 12:32:12 +0100

openmediavault-clamav (0.5.6) stable; urgency=low

  * Modify 'Run' button icon.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 04 Sep 2013 00:32:09 +0200

openmediavault-clamav (0.5.5) stable; urgency=low

  * Update locales.
  * Fix bug when running a scan job manual via WebGUI.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 28 Aug 2013 17:25:38 +0200

openmediavault-clamav (0.5.4) stable; urgency=low

  * Update locales.
  * Various improvements and bugfixes.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 10 Jul 2013 18:17:14 +0200

openmediavault-clamav (0.5.3) stable; urgency=low

  * Update locales.
  * Adapt plugin to new configuration notification API.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 09 Jul 2013 18:17:19 +0200

openmediavault-clamav (0.5.2) stable; urgency=low

  * Update locales.